--- a/mdptest/app/src/main/AndroidManifest.xml
+++ b/mdptest/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:theme="@style/Theme.MDP_Grp_14">
         <activity
             android:name="com.example.mdp_group_31.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="stateUnspecified|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
